--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>Anatomy</title>
-  <link href="./anatomy-style.css"  rel="stylesheet" type="text/css"/>
-  <script src="./jquery.min.js"></script>
-  <script src="./anatomy-config.js"></script>
-  <script src="./anatomy-script.js"></script>
+  <link href="https://github.com/msingh0920/atlas/blob/80680f75991e584cd62d861dea85a243bbd86f11/anatomy-style.css"  rel="stylesheet" type="text/css"/>
+  <script src="https://github.com/msingh0920/atlas/blob/80680f75991e584cd62d861dea85a243bbd86f11/jquery.min.js"></script>
+  <script src="https://github.com/msingh0920/atlas/blob/80680f75991e584cd62d861dea85a243bbd86f11/anatomy-config.js"></script>
+  <script src="https://github.com/msingh0920/atlas/blob/97a9e844143c0cad89e00d48cc351fb6529b2b04/anatomy-script.js"></script>
 </head>
 
 <body>
